--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "ERROR: No README data found!",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test.js"
+    "test": "NODE_ENV=test mocha -w app.js test.js"
   },
   "author": "Ricardo Monteiro",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "hiredis": "^0.4.1",
+    "redis": "^2.2.5"
   },
   "devDependencies": {
     "mocha": "^2.3.3",
